# BorisMathLib

./: CMakeLists.txt  README.md
Curves/: CirclesCurve.cpp  CirclesCurve.h  Dubins.cpp  Dubins.h  ReedsShepp.cpp  ReedsShepp.h
Fitting/: Fitting.cpp  Fitting.h
Geometry/: Line2D.cpp  Line2D.h
Interplot/: BSpline.cpp  BSpline.h  Spline.cpp  Spline.h  SplineCurve.cpp  SplineCurve.h
Interplot/tinyspline/: tinyspline.c  tinyspline.h
Points/: PointsType.h  RefPointsGenerator.cpp  RefPointsGenerator.h
Vectors/: Vector2D.cpp  Vector2D.h
test/: CMakeLists.txt  test_SplineCurve.cpp
test/Interplot/: CMakeLists.txt  test_BSpline.cpp
